<resources>
    <string name="app_name">Show list</string>
    <string name="watched">Watched</string>
    <string name="title">Title:</string>
    <string name="type">Type:</string>
    <string name="description">Description:</string>
    <string name="due_date">Due date:</string>
    <string name="episode">Episode:</string>
    <string name="wrong_date">Wrong date!</string>
    <string-array name="show_type">
        <item name="show_type_series">Series</item>
        <item name="show_type_movie">Movie</item>
    </string-array>
</resources>