<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#040404" />

            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="267dp"
                android:layout_height="50dp"
                android:textColor="#040404" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="#040404" />

            <Spinner
                android:id="@+id/dropdown_show_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/show_type" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/episode"
                android:textColor="#040404" />

            <EditText
                android:id="@+id/edit_text_episode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="#040404" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="#040404" />

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#040404" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|center_vertical"
                android:text="@string/due_date"
                android:textColor="#040404" />

            <TextView
                android:id="@+id/edit_text_due_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="#040404" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/ok_button_create"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Ok" />

            <Button
                android:id="@+id/cancel_button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Cancel" />
        </TableRow>

    </TableLayout>